# Typist

./: .gitignore  CLAUDE.md  README.md  file.js  main.js  preload.js
Frameworks/typst_ios.xcframework/: Info.plist
Typist/: AppAppearanceManager.swift  ContentView.swift  TypistApp.swift
Typist.xcodeproj/: project.pbxproj
Typist/Assets.xcassets/AppIcon.appiconset/: Contents.json
Typist/Bridging/: Typist-Bridging-Header.h  typst_ffi.h
Typist/Compiler/: DirectoryMonitor.swift  ExportController.swift  ExportManager.swift  FontManager.swift  ProjectFileManager.swift  SourceMap.swift  TypstBridge.swift  TypstCompiler.swift  ZipImporter.swift
Typist/Editor/: AutoPairEngine.swift  CompletionEngine.swift  CompletionPopupView.swift  EditorTheme.swift  HighlightScheduler.swift  KeyboardAccessoryView.swift  LineNumberGutterView.swift  SyncCoordinator.swift  SyntaxHighlighter.swift  ThemeManager.swift  TypstTextView.swift
Typist/Localization/: L10n.swift
Typist/Models/: TypistDocument.swift
Typist/Storage/: AppFontLibrary.swift
Typist/Support/: InteractionSupport.swift
Typist/Views/: DocumentEditorView.swift  DocumentListView.swift  EditorView.swift  InitialEntryFilePickerSheet.swift  PreviewPane.swift  ProjectFileBrowserSheet.swift  ProjectSettingsSheet.swift  SettingsView.swift  SlideshowView.swift  SystemSurface.swift
Typist/Views/DocumentEditor/: DocumentEditorView+FileOperations.swift  (+3 more)
TypistTests/: TypistTests.swift
TypistUITests/: TypistUITests.swift  TypistUITestsLaunchTests.swift
rust-ffi/: Cargo.toml  build-ios.sh
rust-ffi/src/: lib.rs
(+4 files in other folders)
